// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot checked false 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "borderColor": "#D6D6D6",
      "borderRadius": 9,
      "borderWidth": 1.5,
      "height": 28,
      "justifyContent": "center",
      "opacity": 1,
      "width": 28,
    }
  }
/>
`;

exports[`snapshot checked true 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#72996B",
      "borderColor": "#D6D6D6",
      "borderRadius": 9,
      "borderWidth": 0,
      "height": 28,
      "justifyContent": "center",
      "opacity": 1,
      "width": 28,
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={18}
    bbWidth={18}
    fill="none"
    focusable={false}
    height={18}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 18,
          "width": 18,
        },
      ]
    }
    vbHeight={96}
    vbWidth={97}
    width={18}
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGRect
        fill={4285700459}
        height={18}
        propList={
          [
            "fill",
          ]
        }
        rx={32}
        width={18}
        x={0.5}
        y={0}
      />
      <RNSVGPath
        d="M62.5 38l-20 20-8-8"
        propList={
          [
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={4294967295}
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={4}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
